--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="hero-content">
             <h1 class="hero-title">Samarth Vohra</h1>
             <h2 class="hero-subtitle">AI/ML Engineer & Computer Science Graduate</h2>
-            <p class="hero-description">Building intelligent solutions to complex problems</p>
+            <p class="hero-description">Turning ideas into intelligent, full-stack solutions — with clean code, smart design, and a touch of AI.</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Hire Me</a>
                 <a href="assets/resume.pdf" download="Samarth_Vohra_Resume.pdf" class="btn btn-secondary">Download Resume</a>
@@ -74,7 +74,13 @@
                 </div>
                 <div class="about-text">
                     <h3>Who am I?</h3>
-                    <p>I'm Samarth Vohra, a recent Computer Science and Engineering graduate with a minor specialization in Artificial Intelligence and Machine Learning. I'm passionate about creating intelligent systems that can learn and adapt.</p>
+                    <p>Hi! I’m <strong>Samarth Vohra</strong>, a full-stack developer and data science enthusiast with a passion for building smart, scalable, and impactful web applications. I recently graduated from <strong>GGSIPU</strong> and have since been diving deep into everything from AI integrations to backend systems and slick frontend design.</p>
+  
+                    <p>My core stack includes <strong>React, Tailwind CSS, Node.js, Django,</strong> and <strong>FastAPI</strong>, with databases like <strong>MongoDB, PostgreSQL,</strong> and <strong>MySQL</strong>. I also work with <strong>Python-based ML tools</strong> and the <strong>OpenAI API</strong> to bring intelligent features into my apps — like AI-powered mental health diagnostics and resume enhancement tools.</p>
+  
+                    <p>Beyond code, I value clean design, clear communication, and solving real problems with tech. Whether I'm working solo or collaborating with a team, I aim to create user-friendly experiences that just make sense.</p>
+  
+                    <p>Let’s build something awesome together!</p>
                     
                     <h3>Education</h3>
                     <div class="timeline">
@@ -148,6 +154,10 @@
                         <span>Python</span>
                     </div>
                     <div class="skill-block">
+                        <i class="fab fa-python"></i>
+                        <span>Jupyter Notebook </span>
+                    </div>
+                    <div class="skill-block">
                         <i class="fab fa-js"></i>
                         <span>JavaScript</span>
                     </div>
@@ -162,6 +172,10 @@
                     <div class="skill-block">
                         <i class="fas fa-plus"></i>
                         <span>C++</span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-file-code"></i>
+                        <span>C </span>
                     </div>
                 </div>
             </div>
@@ -179,12 +193,24 @@
                         <span>Flask</span>
                     </div>
                     <div class="skill-block">
+                        <i class="fab fa-python"></i>
+                        <span>FastAPI </span>
+                    </div>
+                    <div class="skill-block">
                         <i class="fab fa-react"></i>
                         <span>React</span>
                     </div>
                     <div class="skill-block">
                         <i class="fab fa-node-js"></i>
+                        <span>Next.js </span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fab fa-node-js"></i>
                         <span>MERN Stack</span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-code"></i>
+                        <span>ASP.NET </span>
                     </div>
                 </div>
             </div>
@@ -221,6 +247,14 @@
                         <i class="fas fa-link"></i>
                         <span>LangChain</span>
                     </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-circle-nodes"></i>
+                        <span>Matplotlib </span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-diagram-project"></i>
+                        <span>Seaborn </span>
+                    </div>
                 </div>
             </div>
             
@@ -247,6 +281,22 @@
                     <div class="skill-block">
                         <i class="fab fa-github"></i>
                         <span>GitHub</span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fab fa-github"></i>
+                        <span>CI/CD </span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-file-excel"></i>
+                        <span>Excel </span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fas fa-network-wired"></i>
+                        <span>Networking</span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-briefcase"></i>
+                        <span>MS Office</span>
                     </div>
                 </div>
             </div>
@@ -411,7 +461,7 @@
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>New Delhi, India</span>
+                        <span>Ghaziabad, Uttar Pradesh, India</span>
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/samvlp03" target="_blank"><i class="fab fa-github"></i></a>
