--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="assets/images/profile.jpg" alt="Samarth Vohra" class="profile-img">
+                    <img src="assets/images/profile.jpg" alt="Samarth Vohra" class="profile-img" >
                 </div>
                 <div class="about-text">
                     <h3>Who am I?</h3>
@@ -260,7 +260,7 @@
             
             <!-- Other Skills -->
             <div class="skills-category">
-                <h3><i class="fas fa-tools"></i> Other Skills</h3>
+                <h3><i class="fas fa-tools"></i> Databases</h3>
                 <div class="skills-row">
                     <div class="skill-block">
                         <i class="fas fa-database"></i>
@@ -275,8 +275,21 @@
                         <span>PostgreSQL</span>
                     </div>
                     <div class="skill-block">
+                        <i class="fas fa-database"></i>
+                        <span>MongoDB</span>
+                    </div>
+                    <div class="skill-block">
                         <i class="fab fa-aws"></i>
                         <span>AWS</span>
+                    </div>
+                </div>
+            </div>
+            <div class="skills-category">
+                <h3><i class="fas fa-tools"></i> Other Skills</h3>
+                <div class="skills-row">
+                    <div class="skill-block">
+                        <i class="fab fa-docker"></i>
+                        <span>Docker</span>
                     </div>
                     <div class="skill-block">
                         <i class="fab fa-github"></i>
@@ -297,6 +310,14 @@
                     <div class="skill-block">
                         <i class="fa-solid fa-briefcase"></i>
                         <span>MS Office</span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fas fa-clipboard-list"></i>
+                        <span>Agile Methodologies</span>
+                    </div>
+                    <div class="skill-block">
+                        <i class="fa-solid fa-keyboard"></i>
+                        <span>Canva </span>
                     </div>
                 </div>
             </div>
