--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="hero-description">Turning ideas into intelligent, full-stack solutions — with clean code, smart design, and a touch of AI.</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Hire Me</a>
-                <a href="assets/resume.pdf" download="Samarth_Vohra_Resume.pdf" class="btn btn-secondary">Download Resume</a>
+                <a href="assets/Samarth Vohra JEMTEC.pdf" download="Samarth_Vohra_Resume.pdf" class="btn btn-secondary">Download Resume</a>
             </div>
         </div>
         <div class="hero-image">
